
dist_man1_MANS = coot.man coot-density-score-by-residue.man \
                 coot-compare-dictionaries.man \
                 coot-available-comp-id.man \
                 coot-bfactan.man \
                 coot-fix-nomenclature-errors.man \
                 coot-make-shelx-restraints.man \
                 coot-mini-rsr.man \
		 lidia.man findwaters.man findligand.man \
		 layla.man pyrogen.man coot-identify-protein.man
