
EXTRA_DIST = ASN-NAG-via-NAG-ASN.pdb            \
             pyranose-pyranose-via-BETA1-4.pdb  \
             pyranose-pyranose-via-ALPHA1-2.pdb \
             pyranose-pyranose-via-ALPHA1-3.pdb \
	     pyranose-pyranose-via-ALPHA1-6.pdb	\
	     SIA-pyranose-via-ALPHA2-3.pdb      \
	     link-by-torsion-to-pyranose-core-ALPHA1-2.tab \
	     link-by-torsion-to-pyranose-core-ALPHA1-3.tab \
	     link-by-torsion-to-FUC-core-ALPHA1-3.tab \
	     link-by-torsion-to-FUC-core-ALPHA1-2.tab \
	     link-by-torsion-to-FUC-core-ALPHA1-6.tab \
             link-by-torsion-to-NAG-core-NAG-SER.tab \
	     link-by-torsion-to-pyranose-core-ALPHA1-6.tab \
	     link-by-torsion-to-pyranose-core-ALPHA2-3.tab \
             link-by-torsion-to-pyranose-core-BETA1-2.tab  \
	     link-by-torsion-to-pyranose-core-BETA1-3.tab  \
	     link-by-torsion-to-pyranose-core-BETA1-4.tab  \
             link-by-torsion-to-pyranose-core-BETA1-6.tab  \
             link-by-torsion-to-pyranose-core-NAG-ASN.tab  \
	     link-by-torsion-to-pyranose-core-XYP-BMA.tab  \
             NAG-decorations.tab \
             BMA-decorations.tab \
             MAN-decorations.tab \
             GLC-decorations.tab \
             GAL-decorations.tab \
             FUC-decorations.tab \
             FUL-decorations.tab \
             XYP-decorations.tab \
	     theor-helix-70.pdb

subpkgdatadir = $(pkgdatadir)
subpkgdata_DATA = $(EXTRA_DIST)
